<!--<resources>-->
<!--    <string name="app_name">GETME 0.0.1</string>-->
<!--    <string name="LETS_label">LET\'S</string>-->
<!--    <string name="RIDE_label">RIDE</string>-->


<!--    <string name="login_form">Login</string>-->
<!--    <string name="username">Name</string>-->


<!--    <string name="pass_hint">Enter password</string>-->


<!--    <string name="location">Pickup location</string>-->

<!--    <string name="destination">Drop off location</string>-->
<!--    <color name="FBF104">yellow</color>-->
<!--    <color name="FBF9F9">white</color>-->

<!--</resources>-->
<resources>
    <string name="app_name"><b>JETME</b></string>
    <string name="LETS">LET\'S</string>
    <string name="RIDE">RIDE</string>
    <string name="User_Name">Name</string>
    <string name="login_up">Login</string>
    <string name="name_hint">Enter Username</string>
    <string name="Telephone">Telephone</string>
    <string name="Pickup_Location">Pickup Location</string>
    <string name="Drop_location">Drop Location</string>
    <string name="Book_A_Cap">Book A Cap</string>
    <string name="sign_up">Sign Up</string>
    <string name="button">sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="skip_signup">SKIP</string>
    <string name="verify_hint">Verify Phone number</string>
    <string name="welcome"><b>Welcome To JetMe</b></string>
    <string name="verification">Verify</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="number">number</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="or">OR</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="login_with_google">login with Google</string>
    <string name="welcome_to_jetme">WELCOME TO JETME</string>
    <string name="altitude">Altitude</string>
    <string name="distance_to_location">Distance to location</string>
    <string name="outside_temperature">outside temperature</string>
    <string name="distance_to_locations">Distance to location</string>
    <string name="_35000ft">35000ft</string>
    <string name="_2054m">2054m</string>
    <string name="_35deg">35deg</string>
    <string name="_2h_30m">2h:30m</string>
    <string name="input_four_digit_code">Input four Digit Code</string>
    <string name="_681_88">681*****88</string>
    <string name="_0">0</string>
    <string name="__0">0</string>
    <string name="_00">0</string>
    <string name="_000">0</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_passwords">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="version">Version 1.0</string>
    <string name="about_description">At our company, we are dedicated to revolutionizing the way people navigate and explore the world. Our Passenger Positioning System App is designed to provide seamless and efficient transportation services for passengers in various locations. Whether you\'re a frequent traveler or just need a reliable means of getting around, our app is your go-to solution.</string>
    <string name="about_description1">Efficient Routing: Our intelligent routing algorithm calculates the fastest and most efficient routes to your destination. Whether you prefer public transportation, ride-sharing services, or other modes of transport, our app will guide you to your destination with ease.</string>
    <string name="about_description2">Comprehensive Transport Options: We understand that everyone has different preferences when it comes to transportation. Our app integrates multiple transport options, including buses, trains, taxis, and more. You can compare fares, travel times, and choose the mode of transport that suits your needs.</string>

    <string name="about_description3">Timely Notifications: Stay informed throughout your journey with our timely notifications. Receive alerts about upcoming departures, delays, or any changes in your travel itinerary. We strive to keep you updated, ensuring a hassle-free travel experience.</string>
    s

    <string name="about_description4">User-Friendly Interface: Our app features a user-friendly interface designed to make navigation effortless. It\'s intuitive, visually appealing, and accessible to users of all ages and technical backgrounds. We prioritize simplicity and ease of use, allowing you to focus on your travel plans.</string>

    <string name="about_description5">Personalization Options: Tailor the app to your preferences by saving your favorite locations, setting transportation preferences, and receiving personalized recommendations based on your travel history. We believe in providing a personalized experience that meets your specific needs.</string>
    <string name="about_description6">Reliable Support: Our dedicated support team is available to assist you whenever you need assistance or have any inquiries. We value your satisfaction and strive to provide prompt and reliable customer support.</string>
    <string name="name">Enter Names</string>
    <string name="Message">Enter your message here</string>
    <string name="customer_support">Contact US</string>
    <string name="privacy_welcome">Welcome!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="agree">AGREE AND CONTINUE</string>
    <string name="disagree">DISAGREE AND EXIT</string>
    <string name="privacy_text">This app respects and protects user privacy. To provide you with more accurate and personalized services,this app shall use and disclose your information in accordance with this privacy policy. </string>

    <string name="profile_num">699993333</string>
    <string name="profile_name">Malamba Justene</string>
    <string name="account">View Profile</string>

</resources>