<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/jetme_dark_icon"
        android:layout_gravity="center"
      />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="16sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:layout_marginTop="20dp"
        android:gravity="fill"/>
    <TextView
        android:id="@+id/text_description1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description1"
        android:layout_marginTop="20dp"
        android:gravity="fill"/>
    <TextView
        android:id="@+id/text_description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description2"
        android:layout_marginTop="20dp"
        android:gravity="fill"/>
    <TextView
        android:id="@+id/text_description3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description3"
        android:layout_marginTop="20dp"
        android:gravity="fill"/>
    <TextView
        android:id="@+id/text_description4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description4"
        android:layout_marginTop="20dp"
        android:gravity="fill"/>
    <TextView
        android:id="@+id/text_description5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description5"
        android:layout_marginTop="18dp"
        android:gravity="fill"/>

</LinearLayout>
