<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Book_Ride">
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="@color/Yellow_prime"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/jetme_dark_icon"></ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="75dp">

        <TextView
            android:id="@+id/welcome"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/Yellow_prime"
            android:textSize="44sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/User_Name"
                android:gravity="center"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/white_white"
                android:hint="@string/User_Name"
                android:textColorHint="@color/white_white"
                android:textSize="24sp" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:theme="@style/Widget.AppCompat.EditText"
                android:id="@+id/Telephone"
                android:gravity="center"
                android:layout_width="320dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/Telephone"
                android:textColor="@color/white_white"
                android:textColorHint="@color/white_white"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/verify_signup"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="91dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/skip_button"
            android:background="@drawable/android_lar"
            android:text="@string/verification"
            android:textColor="@color/black_black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/skip_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/android_lar"
            android:text="@string/skip_signup"
            android:textColor="@color/black_black"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>
