<!-- contact_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/jetme_dark_icon"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/customer_support"
            android:textColor="@color/Yellow_prime"
            android:textSize="50dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/android_lar"
            android:hint="@string/name_hint"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/android_lar"
            android:hint="@string/number"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/android_lar"
            android:hint="@string/Message"
            android:maxLines="1"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:textSize="16sp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/android_lar"
            android:text="SEND"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>